--- a/app/templates/chatbot.html
+++ b/app/templates/chatbot.html
@@ -146,7 +146,7 @@ body[data-path="/chatbot"] .page {
   </div>
 
   <!-- INPUT BOX -->
-  <div id="sv-chat-input">
+  <div id="sv-chat-input" style="display:none;">
       <form id="sv-send-form">
           <input
               id="sv-message-input"
@@ -174,6 +174,6 @@ body[data-path="/chatbot"] .page {
   localStorage.removeItem("chatbot_active_ticket");
 </script>
 
-<script src="/static/js/chatbot.js?v=2"></script>
+<script src="/static/js/chatbot.js?v=7"></script>
 
-{% endblock %}
+{% endblock %} 
