--- a/app/templates/chatbot.html
+++ b/app/templates/chatbot.html
@@ -146,7 +146,7 @@ body[data-path="/chatbot"] .page {
   </div>
 
   <!-- INPUT BOX -->
-  <div id="sv-chat-input" style="display:none;">
+  <div id="sv-chat-input">
       <form id="sv-send-form">
           <input
               id="sv-message-input"
@@ -167,13 +167,9 @@ body[data-path="/chatbot"] .page {
 
 <script>
   window.ACTIVE_TICKET_FROM_SERVER = null;
-</script>
-
-
-<script>
   localStorage.removeItem("chatbot_active_ticket");
 </script>
 
-<script src="/static/js/chatbot.js?v=10"></script>
+<script src="/static/js/chatbot.js?v=7"></script>
 
-{% endblock %} 
+{% endblock %}
